<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    tools:context=".snackbarsample.SnackbarActivity">

    <Button
        android:id="@+id/button_snackbar"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/buttonSnackBarSample"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/button_snackbar_feedback"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/buttonSnackBarFeedBack"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_snackbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_snackbar"
        app:layout_constraintTop_toBottomOf="@+id/button_snackbar" />

    <Button
        android:id="@+id/button_snackbar_specific"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/buttonSnackBarSpecific"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button_backFromSnackbar"
        app:layout_constraintEnd_toEndOf="@+id/button_snackbar_feedback"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_snackbar_feedback"
        app:layout_constraintTop_toBottomOf="@+id/button_snackbar_feedback"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_backFromSnackbar"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="112dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/buttonBackFromSnackBar"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_snackbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_snackbar"
        app:layout_constraintTop_toBottomOf="@+id/button_snackbar"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>