<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    tools:context=".alertviewsample.AlertViewActivity">

    <Button
        android:id="@+id/button_backFromAlert"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:text="@string/buttonBackFromAlertView"
        app:layout_constraintEnd_toEndOf="@+id/button_alertSpecial"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/button_alertSpecial"
        app:layout_constraintTop_toBottomOf="@+id/button_alertSpecial" />

    <Button
        android:id="@+id/button_alertNormal"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/buttonAlertNormal"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <Button
        android:id="@+id/button_alertSpecial"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:text="@string/buttonAlertSpecial"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_alertNormal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_alertNormal"
        app:layout_constraintTop_toBottomOf="@+id/button_alertNormal" />
</android.support.constraint.ConstraintLayout>